adding link on title

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <body>
         <div id="render"></div>
         <nav>
-            <div id="nav-logo"></div>
-            <div id="nav-title">Makio135</div>
+            <a href="/">
+                <div id="nav-logo"></div>
+                <div id="nav-title">Makio135</div>
+            </a>
         </nav>
 
         <script src="d3.v4.min.js"></script>
