--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
         <title>Makio135</title>
 
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i" rel="stylesheet">
+        <!-- <link href="grid.css" rel="stylesheet"> -->
         <link href="main.css" rel="stylesheet">
     </head>
 
     <body>
+        <div id="top">
+            <nav>
+                <div id="nav-logo"></div>
+                <div id="nav-title">Makio135</div>
+            </nav>
+        </div>
         <div id="render"></div>
-        <nav>
-            <div id="nav-logo"></div>
-            <div id="nav-title">Makio135</div>
-        </nav>
+
+        <!-- <div id="grid"></div> -->
 
         <script src="d3.v4.min.js"></script>
         <script src="d3-selection-multi.v1.min.js"></script>
         <script src="https://cdn.rawgit.com/riccardoscalco/textures/master/textures.min.js"></script>
         <script src="main.js"></script>
+        <!-- <script src="grid.js"></script> -->
     </body>
 </html>
